<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ultimate.ultimatesophos.presentation.view.activities.LoginActivity">

    <ImageView
        android:id="@+id/sophosLogoImageView"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/sophos_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/login_image_description" />

    <TextView
        android:id="@+id/textView"
        style="@style/regular_text"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_description"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sophosLogoImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="350dp"
        android:layout_height="50dp"
        style="@style/TextInputLayoutAppearanceFilled"
        app:startIconDrawable="@drawable/account_circle_icon"
        app:startIconContentDescription="@string/user_icon_image_description"
        android:hint="@string/email_hint"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="350dp"
            android:layout_height="50dp"
            style="@style/TextInputLayoutAppearanceFilled"
            app:startIconDrawable="@drawable/key_icon"
            app:startIconContentDescription="@string/password_icon_description"
            app:endIconMode="password_toggle"
            android:hint="@string/password_hint"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginWithCredentialsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/login_button"
        android:text="@string/access_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:enabled="false"
        android:backgroundTint="@color/button_disabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginWithFingerprintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center|center_vertical"
        style="@style/button_no_background"
        android:textColor="@color/main_color"
        android:drawableLeft="@drawable/fingerprint_icon"
        android:text="@string/fingerprint_button_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWithCredentialsButton" />

    <ProgressBar
        android:id="@+id/loaderProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
