<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sendDocumentsTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/regular_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/send_documents_fragment_title"
        android:textColor="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ultimate.ultimatesophos.presentation.view.fragments.SendDocumentsFragment">

        <ImageView
            android:id="@+id/addPhotoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_add_a_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/documentTypeInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:paddingStart="10dp"
            app:endIconTint="@color/border_selector_black"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addPhotoImageView"
            >

            <AutoCompleteTextView
                android:id="@+id/documentTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:inputType="none"
                android:text="@string/document_type_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/documentNumberInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:boxStrokeColor="@color/border_selector_black"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/document_number_hint"
            app:startIconDrawable="@drawable/ic_badge"
            app:startIconTint="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/documentTypeInputLayout"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/documentNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namesInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:boxStrokeColor="@color/border_selector_black"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/names_hint"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/documentNumberInputLayout"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/namesEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnamesInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:boxStrokeColor="@color/border_selector_black"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/lastnames_hint"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/namesInputLayout"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastnamesEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:boxStrokeColor="@color/border_selector_black"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/email_hint"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/lastnamesInputLayout"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:endIconTint="@color/border_selector_black"
            app:boxStrokeColor="@color/border_selector_black"
            app:boxStrokeWidth="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            >

            <AutoCompleteTextView
                android:id="@+id/cityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:inputType="none"
                android:text="@string/city_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attachmentTypeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:boxStrokeColor="@color/border_selector_black"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/attachment_type_hint"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/cityInputLayout"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/attachmentTypeText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/attachDocumentButton"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/secondary_color"
            android:gravity="start|center_vertical"
            android:text="@string/document_button"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_backup"
            app:iconTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attachmentTypeLayout"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/sendFormButton"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:text="@string/send_form_button"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/secondary_color"
            app:layout_constraintTop_toBottomOf="@id/attachDocumentButton"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
