<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ultimate.ultimatesophos.presentation.view.fragments.WelcomeFragment">

    <ImageView
        android:id="@+id/corporateLogoImageView"
        android:layout_width="450dp"
        android:layout_height="270dp"
        android:src="@drawable/corporate_template_2022"
        android:contentDescription="@string/corporate_logo_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        app:fontFamily="@font/montserrat"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/welcome_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sendDocumentsCardView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        card_view:strokeColor="@color/secondary_color"
        card_view:strokeWidth="1dp"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/corporateLogoImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sendDocumentsConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/sendDocumentsIconImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_description"
                android:contentDescription="@string/send_documents_icon_description"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sendDocumentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/card_text"
                android:textColor="@color/secondary_color"
                android:layout_marginStart="5dp"
                android:text="@string/menu_send_documents"
                app:layout_constraintTop_toTopOf="@id/sendDocumentsIconImageView"
                app:layout_constraintStart_toEndOf="@id/sendDocumentsIconImageView"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendDocumentsButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:drawableEnd="@drawable/ic_arrow_forward"
                style="@style/button_no_background"
                android:text="@string/access_text"
                android:textSize="13sp"
                android:textColor="@color/secondary_color"
                app:strokeColor="@color/secondary_color"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/watchDocumentsCardView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        card_view:strokeColor="@color/tertiary_color"
        card_view:strokeWidth="1dp"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/sendDocumentsCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/watchDocumentsConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/watchDocumentsIconImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_description"
                app:tint="@color/tertiary_color"
                android:contentDescription="@string/watch_documents_icon_description"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/watchDocumentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/card_text"
                android:textColor="@color/tertiary_color"
                android:layout_marginStart="5dp"
                android:text="@string/menu_watch_documents"
                app:layout_constraintTop_toTopOf="@id/watchDocumentsIconImageView"
                app:layout_constraintStart_toEndOf="@id/watchDocumentsIconImageView"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/watchDocumentsButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:drawableEnd="@drawable/ic_arrow_forward"
                android:drawableTint="@color/tertiary_color"
                style="@style/button_no_background"
                android:text="@string/access_text"
                android:textSize="13sp"
                android:textColor="@color/tertiary_color"
                android:textAlignment="center"
                app:strokeColor="@color/tertiary_color"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/officesCardView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        card_view:strokeColor="@color/quaternary_color"
        card_view:strokeWidth="1dp"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/watchDocumentsCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/officesConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/officesIconImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_description"
                app:tint="@color/quaternary_color"
                android:contentDescription="@string/send_documents_icon_description"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/officesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/card_text"
                android:textColor="@color/quaternary_color"
                android:layout_marginStart="5dp"
                android:text="@string/menu_offices"
                app:layout_constraintTop_toTopOf="@id/officesIconImageView"
                app:layout_constraintStart_toEndOf="@id/officesIconImageView"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/officesButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:drawableEnd="@drawable/ic_arrow_forward"
                android:drawableTint="@color/quaternary_color"
                style="@style/button_no_background"
                android:text="@string/access_text"
                android:textSize="13sp"
                android:textColor="@color/quaternary_color"
                app:strokeColor="@color/quaternary_color"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
